Comlex business directive layout issue add haschildcolumns attribute in vr-columns directive
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C32479

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -329,7 +329,10 @@ inp .menu-to-top {
 .empty-line-col {
     top: 25px;
 }
-
+.parent-col-container{
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
 .dropdown-item {
     height: 37px !important;
     font-size: 20px;
